df merging conflict

--- a/Blitz-code.ipynb
+++ b/Blitz-code.ipynb
@@ -810,11 +810,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "53a1e273",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 97 entries, 0 to 96\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                             Non-Null Count  Dtype \n",
+      "---  ------                             --------------  ----- \n",
+      " 0   patient_id                         97 non-null     int64 \n",
+      " 1   date_of_birth                      97 non-null     object\n",
+      " 2   medical_condition                  97 non-null     object\n",
+      " 3   co_morbidity                       57 non-null     object\n",
+      " 4   ethnicity                          95 non-null     object\n",
+      " 5   risk_factor                        97 non-null     object\n",
+      " 6   lmp                                97 non-null     object\n",
+      " 7   cycle_length                       97 non-null     int64 \n",
+      " 8   edd                                97 non-null     object\n",
+      " 9   number_of_babies                   97 non-null     int64 \n",
+      " 10  other checks                       14 non-null     object\n",
+      " 11  infection_history                  30 non-null     object\n",
+      " 12  past_medical_history               90 non-null     object\n",
+      " 13  pastPregnancy                      97 non-null     object\n",
+      " 14  medications                        83 non-null     object\n",
+      " 15  previous_unsuccessful_pregnancies  97 non-null     int32 \n",
+      "dtypes: int32(1), int64(3), object(12)\n",
+      "memory usage: 11.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "84670025",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 82 entries, 0 to 81\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                    Non-Null Count  Dtype \n",
+      "---  ------                    --------------  ----- \n",
+      " 0   patient_id                82 non-null     int64 \n",
+      " 1   doctor_advice_notes       82 non-null     object\n",
+      " 2   info                      82 non-null     object\n",
+      " 3   full_clinical_obs         82 non-null     object\n",
+      " 4   full_Appointment_reasons  82 non-null     object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 3.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged.info()"
+   ]
   },
   {
    "cell_type": "code",
@@ -823,8 +884,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df =  pd.merge(dataset1,df_merged, on=\"patient_id\")\n"
+    "df =  pd.merge(dataset1,df_merged, on=\"patient_id\",how ='outer')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "888eae18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
